day3/app1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx
  namespace: ingress-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: ingress-lab
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
