day3/app2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-echo
  namespace: ingress-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:1.0
        args:
        - "-text=Hello from APP2"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: ingress-lab
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5678
